--- a/AppLauncher/packages.config
+++ b/AppLauncher/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net452" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.18" targetFramework="net452" />
   <package id="Vlc.DotNet.Core" version="3.1.0" targetFramework="net452" />
   <package id="Vlc.DotNet.Core.Interops" version="3.1.0" targetFramework="net452" />
